RESOLVED FIXED301014
[iPad] Bsky.com video posts can't enter fullscreen mode
https://bugs.webkit.org/show_bug.cgi?id=301014
Summary [iPad] Bsky.com video posts can't enter fullscreen mode
Jer Noble
Reported 2025-10-17 15:45:32 PDT
[iPad] Bsky.com video posts can't enter fullscreen mode
Attachments
Jer Noble
Comment 1 2025-10-17 15:45:34 PDT
Jer Noble
Comment 2 2025-10-17 15:49:14 PDT
EWS
Comment 3 2025-10-17 19:31:07 PDT
Committed 301756@main (1ede5ce1bc22): <https://commits.webkit.org/301756@main> Reviewed commits have been landed. Closing PR #52585 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.